testdata/baselines/reference/submodule/conformance/emitArrowFunctionWhenUsingArguments17_ES6(alwaysstrict=false).errors.txt
error TS5108: Option 'alwaysStrict=false' has been removed. Please remove it from your configuration.
emitArrowFunctionWhenUsingArguments17_ES6.ts(2,11): error TS1100: Invalid use of 'arguments' in strict mode.
emitArrowFunctionWhenUsingArguments17_ES6.ts(6,9): error TS1100: Invalid use of 'arguments' in strict mode.


!!! error TS5108: Option 'alwaysStrict=false' has been removed. Please remove it from your configuration.
==== emitArrowFunctionWhenUsingArguments17_ES6.ts (2 errors) ====
    function f() {
        var { arguments } = { arguments: "hello" };
              ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        if (Math.random()) {
            return () => arguments[0];
        }
        var arguments = "world";
            ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    }